--- a/src/assets/css/pages/archive-works/_index.scss
+++ b/src/assets/css/pages/archive-works/_index.scss
@@ -1,31 +1,31 @@
-.archive {
+.archive-works {
   position: relative;
 }
 
-.archive__bg {
+.archive-works__bg {
   padding: 140px 0 0;
 }
 
-.archive__inner {
+.archive-works__inner {
   margin: 120px 0 0;
 }
 
-.archive__list {
+.archive-works__list {
   display: grid;
   grid-template-columns: repeat(3, 14rem);
   gap: 2rem;
 }
 
-.archive__text {
+.archive-works__text {
   font-size: vw(17);
   line-height: 1.6;
   letter-spacing: 0.02em;
 }
 
-.archive__text + .archive__text {
+.archive-works__text + .archive-works__text {
   margin: 32px 0 0;
 }
 
-.archive__pagination {
+.archive-works__pagination {
   margin: 120px 0 0;
 }
