fix: typo prettier

--- a/src/assets/css/base/_variables.scss
+++ b/src/assets/css/base/_variables.scss
@@ -23,8 +23,7 @@ $color-white: #ffffff;
 $color-black: #1a1a1a;
 
 // fonts
-$font-yugo: "游ゴシック体", "YuGothic", "游ゴシック Medium", "Yu Gothic Medium",
-  "游ゴシック", "Yu Gothic", "sans-serif";
+$font-yugo: "游ゴシック体", "YuGothic", "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", "sans-serif";
 
 // animations
 $duration-short: 0.3s;
