--- a/src/assets/css/base/_editor.scss
+++ b/src/assets/css/base/_editor.scss
@@ -143,8 +143,7 @@
       height: vw(12);
       margin: 0 0 0 6px;
       content: "";
-      background: url($base-dir + "assets/images/icon-blank.svg") no-repeat
-        center / cover;
+      background: url($base-dir + "assets/images/icon-blank.svg") no-repeat center / cover;
     }
   }
 }
