feat: 👁️ アクセシビリティの強化

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -5,6 +5,7 @@
 @import "./base/destyle";
 @import "./base/global";
 @import "./base/editor";
+@import "./base/utility";
 
 // パーツを読み込む
 @import "./parts/**/*";
