--- a/src/assets/css/parts/_global-hamburger-menu.scss
+++ b/src/assets/css/parts/_global-hamburger-menu.scss
@@ -3,7 +3,6 @@
   top: 0;
   left: 0;
   z-index: 11;
-  display: none;
   align-items: center;
   justify-content: center;
   width: 100%;
@@ -17,13 +16,17 @@
   transition: opacity $duration-base $easing-material;
 }
 
-.is-loaded .global-hamburger-menu {
-  display: flex;
-}
-
 .is-hamburger-menu-open .global-hamburger-menu {
   pointer-events: auto;
   opacity: 1;
+}
+
+.global-hamburger-menu__nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 .global-hamburger-menu__item:not(:first-of-type) {
